--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lintfix": "prettier --write --list-different . && npm run lint:js -- --fix && npm run lint:style -- --fix"
   },
   "dependencies": {
+    "@nuxtjs/moment": "^1.6.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.12.2",
     "nuxt-microcms-module": "^2.0.1",
