--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nuxt-microcms-module": "^2.0.1",
     "sass": "^1.54.8",
     "vue": "^2.6.14",
+    "vue-scrollto": "^2.20.0",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14"
   },
