--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.19.3",
     "nuxt": "^2.12.2",
     "nuxt-microcms-module": "^2.0.1",
+    "nuxt-webfontloader": "^1.1.0",
     "sass": "^1.54.8",
     "vue": "^2.6.14",
     "vue-scrollto": "^2.20.0",
